codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__experimental_popup_reflection_runtime_enabled.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Experimental features
  Toggle experimental features. Changes are saved to config.toml.

› [ ] JavaScript REPL              Enable a persistent Node-backed JavaScript REPL for interactive website debugging
                                   and other inline JavaScript execution capabilities. Requires Node >= v22.22.0
                                   installed.
  [x] Reflection                   Run a reflection judge pass before Codex finalizes a response.
  [ ] Apps                         Use a connected ChatGPT App using "$". Install Apps via /apps command. Restart
                                   Codex after enabling.
  [ ] Guardian Approvals           When Codex needs approval for higher-risk actions (e.g. sandbox escapes or blocked
                                   network access), route eligible approval requests to a carefully-prompted security
                                   reviewer subagent rather than blocking the agent on your input. This can consume
                                   significantly more tokens because it runs a subagent on every approval request.
  [ ] App-server TUI               Use the app-server-backed TUI implementation.
  [ ] Prevent sleep while running  Keep your computer awake while Codex is running a thread.

  Press space to select or enter to save for next conversation
