codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_selection_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Select Model and Effort
  Access legacy models by running codex -m <model_name> or in your config.toml

› 1. openai/gpt-5.3-codex (default)          Latest frontier agentic coding
                                             model.
  2. openai/gpt-5.4                          Latest frontier agentic coding
                                             model.
  3. openai/gpt-5.2-codex                    Frontier agentic coding model.
  4. openai/gpt-5.1-codex-max                Codex-optimized flagship for deep
                                             and fast reasoning.
  5. openai/gpt-5.2                          Latest frontier model with
                                             improvements across knowledge,
                                             reasoning and coding
  6. openai/gpt-5.1-codex-mini               Optimized for codex. Cheaper,
                                             faster, but less capable.
  7. github-copilot/gpt-5.3-codex (default)  Latest frontier agentic coding
                                             model.
  8. github-copilot/gpt-5.4                  Latest frontier agentic coding
                                             model.

  Press enter to select reasoning effort, or esc to dismiss.
